default/objects/Credit_Factory_Opportunity__c/Credit_Factory_Opportunity__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping for Opportunity</description>
    <label>Credit Factory Opportunity</label>
</CustomObject>