default/objects/Credit_Factory_Opportunity__c/fields/Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period__c</fullName>
    <label>Billing Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>