default/objects/Credit_Factory_Opportunity__c/fields/Buffer__c.field-meta.xml
<CustomField>
    <fullName>Buffer__c</fullName>
    <label>Buffer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>