default/objects/Credit_Factory_Opportunity__c/fields/CF_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>CF_Credit_Limit__c</fullName>
    <label>CF Credit Limit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>