default/objects/Credit_Factory_Opportunity__c/fields/Credit_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Date__c</fullName>
    <label>Credit Check Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>