default/objects/Credit_Factory_Opportunity__c/fields/Credit_Decision__c.field-meta.xml
<CustomField>
    <fullName>Credit_Decision__c</fullName>
    <label>Credit Decision</label>
    <length>100</length>
    <type>Text</type>
</CustomField>