default/objects/Credit_Factory_Opportunity__c/fields/Credit_System_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_System_Limit__c</fullName>
    <label>Credit System Limit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>