default/objects/Credit_Factory_Opportunity__c/fields/Current_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Current_Payment_Method__c</fullName>
    <label>Current Payment Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>