default/objects/Credit_Factory_Opportunity__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>