default/objects/Credit_Factory_Opportunity__c/fields/Details_Correct__c.field-meta.xml
<CustomField>
    <fullName>Details_Correct__c</fullName>
    <label>Details Correct</label>
    <length>100</length>
    <type>Text</type>
</CustomField>