default/objects/Credit_Factory_Opportunity__c/fields/Financials__c.field-meta.xml
<CustomField>
    <fullName>Financials__c</fullName>
    <label>Financials</label>
    <length>100</length>
    <type>Text</type>
</CustomField>