default/objects/Credit_Factory_Opportunity__c/fields/Fuel_consumption_l_month__c.field-meta.xml
<CustomField>
    <fullName>Fuel_consumption_l_month__c</fullName>
    <label>Fuel consumption l/month</label>
    <length>100</length>
    <type>Text</type>
</CustomField>