default/objects/Credit_Factory_Opportunity__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <label>IBAN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>