default/objects/Credit_Factory_Opportunity__c/fields/Max_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Credit_Limit__c</fullName>
    <label>Max Credit Limit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>