default/objects/Credit_Factory_Opportunity__c/fields/Monthly_Volume_Currency__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Volume_Currency__c</fullName>
    <label>Monthly Volume Currency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>