default/objects/Credit_Factory_Opportunity__c/fields/Number_of_employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_employees__c</fullName>
    <label>Number of employees</label>
    <length>100</length>
    <type>Text</type>
</CustomField>