default/objects/Credit_Factory_Opportunity__c/fields/Payer_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Owner_Name__c</fullName>
    <label>Payer Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>