default/objects/Credit_Factory_Opportunity__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>100</length>
    <type>Text</type>
</CustomField>