default/objects/Credit_Factory_Opportunity__c/fields/Payment_Terms_Credit__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Credit__c</fullName>
    <label>Payment Terms Credit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>