default/objects/Credit_Factory_Opportunity__c/fields/Processed_by__c.field-meta.xml
<CustomField>
    <fullName>Processed_by__c</fullName>
    <label>Processed by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>