default/objects/Credit_Factory_Opportunity__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>