default/objects/Credit_Factory_Opportunity__c/fields/Year_of_foundation__c.field-meta.xml
<CustomField>
    <fullName>Year_of_foundation__c</fullName>
    <label>Year of foundation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>